--- a/resume.html
+++ b/resume.html
@@ -17,72 +17,20 @@
     </nav>
   </header>
 
-  <section class="resumeWrap">
-    <div class="circleA" aria-hidden="true"></div>
-    <div class="circleB" aria-hidden="true"></div>
-
-    <div class="resumeCard">
-      <div class="resumeHeader">
-        <div class="avatar">
-          <img src="assets/img/bio.jpg" alt="Chloe headshot">
-        </div>
-        <div>
-          <h1>Chloe Marino</h1>
-          <div class="resumeSmall">@chloe.marino.dancer • [City, State]</div>
-        </div>
-      </div>
-
-      <div class="resumeCols">
-        <div>
-          <h3>Film / TV</h3>
-          <ul>
-            <li>[Project / Role / Director]</li>
-            <li>[Project / Role / Director]</li>
-          </ul>
-
-          <h3>Stage / Theater</h3>
-          <ul>
-            <li>[Event / Role / Director]</li>
-            <li>[Event / Role / Director]</li>
-          </ul>
-
-          <h3>Prints</h3>
-          <ul>
-            <li>[Brand / Photographer]</li>
-            <li>[Brand / Photographer]</li>
-          </ul>
-
-          <h3>Modeling</h3>
-          <ul>
-            <li>[Brand / Show / Designer]</li>
-            <li>[Brand / Show / Designer]</li>
-          </ul>
-
-          <h3>Awards (optional)</h3>
-          <ul>
-            <li>[Competition / Award]</li>
-            <li>[Competition / Award]</li>
-          </ul>
-        </div>
-
-        <div class="meta">
-          <p><strong>Height:</strong> [ ]</p>
-          <p><strong>Weight:</strong> [ ]</p>
-          <p><strong>Hair:</strong> [ ]</p>
-          <p><strong>Eyes:</strong> [ ]</p>
-
-          <h3>Training</h3>
-          <ul>
-            <li>Jazz, Contemporary, Ballet, Hip Hop, Acro, Tap</li>
-            <li>[Studio / Coach / Convention]</li>
-          </ul>
-
-          <h3>Contact</h3>
-          <p>[Email]</p>
-          <p>[Phone]</p>
-        </div>
-      </div>
+  <main class="wrap" style="padding-top:40px; padding-bottom:60px;">
+    <div style="max-width:900px; margin:0 auto;">
+      <img
+        src="assets/img/chloe-resume.jpg"
+        alt="Chloe Marino Dance Resume"
+        style="
+          width:100%;
+          height:auto;
+          display:block;
+          box-shadow:0 20px 60px rgba(0,0,0,.15);
+          border-radius:12px;
+        "
+      />
     </div>
-  </section>
+  </main>
 </body>
 </html>
