--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
   <main class="wrap" style="padding-top:40px; padding-bottom:60px;">
     <div style="max-width:900px; margin:0 auto;">
       <img
-        src="assets/img/chloe-resume.jpg"
+        src="assets/chloe resume.jpg"
         alt="Chloe Marino Dance Resume"
         style="
           width:100%;
